--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,94 @@
-nav {
-    font-size: 40px;
-    margin: 50px;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+    line-height: 1.3;
+    font-family: 'Roboto', sans-serif;
+    
+ }
+
+header {
+    padding: 5px 30px;
+    width: 100%;
+    background-color: #ffffff;
+    font-family: 'Roboto', sans-serif;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.30);
+    position: fixed;
+    z-index: 3;
+    
+}
+
+/*Toggle*/
+.menu-toggle {
+    display: none;
+    flex-direction: column;
+    height: 15px;
+    justify-content: space-between ;
+    cursor: pointer;
+}
+
+.toggle-line {
+    width: 20px;
+    height: 3px;
+    background-color: #21325E;
+    margin-left: 10px;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    font-weight: bold;
+    color: #21325E;
+    text-decoration: none;
+} 
+
+nav li :hover {
+    color: #ffffff;
+    background-color: #21325E;
+    border-radius: 50px;
+    padding: 8px 20px;
+}
+
+.nav-links a{
+    
+    font-weight: bold;
+    color: #21325E;
+    text-decoration: none;
+    padding: 0 20px;
+}
+.logo {
+    cursor: pointer;
+    padding-top: 4px;
+}
+
+.nav-menu {
+    list-style: none;
+    display: flex;
+}
+
+
+/* this is for footer*/
+footer {
+    background-color: #21325E;
+    color: #ffffff;
+    position: relative;
+    bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    margin-top: 30px;
+   
+}
+
+.container-footer {
+    padding: 0px 20px;
+}
+.copyright {
+    font-size: 12px;
+    padding: 0 20px 0 0;
+    position: relative;
 }
