--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -6,7 +6,7 @@
     line-height: 1.3;
     font-family: 'Roboto', sans-serif;
     
- }
+ } */
 
 .home-1 {
     padding: 110px 20px 60px;
@@ -29,11 +29,21 @@
     display: inline-block;
     padding: 80px 0 0 0 ;
 }
+.name {
+    padding-bottom: 10px;
+}
+.univ {
+    font-family: 'Nunito', sans-serif;
+    padding: 0px 0 7px;
+    font-size:large;
+}
 .resume {
     margin-top: 20px;
 }
 .resume a {
-    
+    text-decoration: none;
+    font-weight: bold;
+    font-size: large;
     background-color: #21325E;
     color: #ffffff;
     font-family: 'Roboto', sans-serif;
@@ -41,3 +51,11 @@
     padding: 8px 20px;
  
 }
+
+/* .insta img{
+    width: 18em;
+    height: 18em;
+    border-style: solid;
+    border-color: white;
+    border-bottom: 10px;
+} */
