--- a/src/App.css
+++ b/src/App.css
@@ -8,35 +8,48 @@
     
  }
 
-header {
-    padding: 5px 30px;
-    width: 100%;
-    background-color: #ffffff;
-    font-family: 'Roboto', sans-serif;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.30);
-    position: fixed;
-    z-index: 3;
+ /* .navbar {
+    background: transparent;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 10;
+ } */
 
+ 
+
+ /* ul a {
+    text-decoration: none;
+    color: #21325E;
+    display: flex;
+    font-size: 1.2rem;
+    align-items: center;
+    height: 100%;
+    cursor: pointer;
+    padding-left: 20px;
     
-}
+ } */
 
 /*Toggle*/
-.menu-toggle {
+/* .menu-toggle {
     display: none;
     flex-direction: column;
     height: 15px;
     justify-content: space-between ;
     cursor: pointer;
-}
+} */
 
-.toggle-line {
+/* .toggle-line {
     width: 20px;
     height: 3px;
     background-color: #21325E;
     margin-left: 10px;
-}
+} */
 
-nav{
+/* nav{
+    margin-left: 100px;
+    margin-right: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -44,14 +57,14 @@ nav{
     font-weight: bold;
     color: #21325E;
     text-decoration: none;
-} 
+}  */
 
-nav li :hover {
+/* nav li :hover {
     color: #ffffff;
     background-color: #21325E;
     border-radius: 50px;
     padding: 8px 30px;
-}
+} */
 
 
 
@@ -71,6 +84,16 @@ nav li :hover {
 .nav-menu {
     list-style: none;
     display: flex;
+    display: flex;
+    align-items: center;
+    margin-right: -24px;
+
+  /* .menu-item + .menu-item {
+    margin-left: 1rem;
+  }
+  @media screen and (max-width: 768px) {
+    display: none;
+  } */
 }
 
 .contact-me a{
@@ -87,30 +110,4 @@ nav li :hover {
     font-weight: bold;
 }
 
-/* this is for footer*/
-footer {
-    background-color: #21325E;
-    color: #ffffff;
-    display: flex;
-    justify-content: space-between;
-    font-family: 'Poppins', sans-serif;
-    margin-top: 30px;
-    padding: 10px;
-   
-}
 
-.container-footer {
-    padding: 0px 20px;
-}
-
-.container-footer img{
-    vertical-align: middle;
-}
-
-.copyright {
-    font-size: large;
-    position: relative;
-    justify-content: center;
-    top: 25%;
-    padding: 0 25px 0 ;
-}
