--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,34 +1,25 @@
-/* * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    scroll-behavior: smooth;
-    line-height: 1.3;
-    font-family: 'Roboto', sans-serif;
-    
- } */
+
 
 .home-1 {
-    padding: 110px 20px 60px;
+    padding: 110px 15rem 60px;
+    text-align: left;
     display: flex;
-    text-align: center;
-    justify-content: center;
+    justify-content:space-around;
 }
 
 .foto-prof {
-    padding: 5px 90px 5px 0;
+    padding: 5px 5px 5px 0;
 }
 
 .desc-profile {
-    padding: 5px 40px 5px 5px;
+    display: flex;
+    padding: 5px 10px 5px 5px;
+    flex-direction: column;
+    justify-content: center;
 
 }
 
-.desc-profile-1 {
-    vertical-align: middle;
-    display: inline-block;
-    padding: 80px 0 0 0 ;
-}
+
 .name {
     padding-bottom: 10px;
 }
@@ -52,10 +43,10 @@
  
 }
 
-/* .insta img{
+.insta img{
     width: 18em;
     height: 18em;
     border-style: solid;
     border-color: white;
     border-bottom: 10px;
-} */
+}
