fix home js, replace header

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -3,6 +3,7 @@ footer {
     background-color: #21325E;
     color: #ffffff;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     font-family: 'Poppins', sans-serif;
     margin-top: 30px;
