--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,19 +1,199 @@
 
-header {
+.navbar {
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+  }
+  
+  .header-bg {
+      background-color: #fff;
+  }
+
+  .navbar-container {
+    display: flex;
+    align-items: center;
+    height: 80px;
+    max-width: 1500px;
+  }
+  
+  .navbar-logo {
+    justify-self: start;
+    margin-left: 20px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+  }
+  
+  .fa-typo3 {
+    margin-left: 0.5rem;
+    font-size: 1.8rem;
+  }
+  
+  .nav-menu {
+    display: flex;
+    
+    grid-gap: 10px;
+    list-style: none;
+    text-align: center;
+    width: 60vw;
+    justify-content: flex-end;
+    margin-right: 2rem;
+  }
+
+  .resume-header {
+    padding-left: 2rem;
+  }
+  .resume-header a {
+    text-decoration: none;
+    font-weight: bold;
+    font-size: large;
+    color: #21325E;
+ 
+}
+  
+  .nav-item {
+    height: 80px;
+  }
+  
+  .nav-links {
+    color: #21325E;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    height: 100%;
+  }
+  
+  .nav-links:hover {
+    border-bottom: 4px solid #fff;
+    transition: all 0.2s ease-out;
+  }
+  
+  .fa-bars {
+    color: #fff;
+  }
+  
+  .nav-links-mobile {
+    display: none;
+  }
+  
+  .menu-icon {
+    display: none;
+  }
+
+
+  @media screen and (max-width: 1000px) {
+    .NavbarItems {
+      position: relative;
+    }
+  
+    .nav-menu {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 90vh;
+      position: absolute;
+      top: 80px;
+      left: -100%;
+      opacity: 1;
+      transition: all 0.5s ease;
+      justify-content: flex-start;
+    }
+  
+    .nav-menu.active {
+      background: #fffefe;
+      left: 0;
+      opacity: 1;
+      transition: all 0.5s ease;
+      z-index: 1;
+    }
+  
+    .nav-links {
+      text-align: center;
+      padding: 2rem;
+      width: 100%;
+      display: table;
+    }
+  
+    .nav-links:hover {
+      background-color: #fff;
+      color: #242424;
+      border-radius: 0;
+    }
+  
+    .navbar-logo {
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: translate(20%, 30%);
+    }
+  
+    .menu-icon {
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      transform: translate(-100%, 60%);
+      font-size: 1.8rem;
+      cursor: pointer;
+    }
+  
+    .fa-times {
+      color: #fff;
+      font-size: 2rem;
+    }
+  
+    /* .nav-links-mobile {
+      display: block;
+      text-align: center;
+      margin: 2rem auto;
+      border-radius: 4px;
+      width: 80%;
+      text-decoration: none;
+      font-size: 1.5rem;
+      background-color: transparent;
+      color: #fff;
+      padding: 14px 20px;
+      border: 1px solid #fff;
+      transition: all 0.3s ease-out;
+    }
+  
+    .nav-links-mobile:hover {
+      background: #fff;
+      color: #242424;
+      transition: 250ms;
+    } */
+  }
+  
+
+/* header {
     position: fixed;
-    width: 100%;
+    top: 0;
     transition: all 1.5s ease-in;
-    margin-right: auto;
-    margin-left: auto;
+    width: 100%;
+    z-index: 5;
+    
  }
 
 .navbar {
+    padding: 1rem;
+    margin-right: auto;
+    margin-left: auto;
     background: transparent;
-    height: 5rem;
+    height: 7rem;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    z-index: 10;
+    justify-content: space-around;
+    z-index: 2;
+    font-weight: bold;
 
 }
 .header-bg {
@@ -35,17 +215,7 @@ ul a {
     
  }
 
- nav{
-    padding-left: 15rem;
-    padding-right: 15rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-    font-weight: bold;
-    color: #21325E;
-    text-decoration: none;
-}
+
 
 nav a :hover {
     color: #ffffff;
@@ -57,9 +227,9 @@ nav a :hover {
 
 .menu-icon{
     display: none;
-}
+} */
 
-@media (max-width: 800px) {
+/* @media (max-width: 800px) {
 
     .home-1 {
         flex-direction: column;
@@ -88,9 +258,10 @@ nav a :hover {
         background: #afaeae;
         left: 0;
         opacity: 1;
-        /* transition: all 0.5s ease; */
+        /* transition: all 0.5s ease; *//*
         z-index: 1;
       }
+      
     
       .nav-links {
         text-align: center;
@@ -128,9 +299,9 @@ nav a :hover {
       }
     
       
-}
+} */
 @media (max-width: 767px){ 
     
-}
+} 
 
 
