--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,33 +1,33 @@
 
+.hero{
+    height: 100%;
+    position: relative;
+    
+}
 
-.home-1 {
-    padding: 110px 15rem 60px;
-    text-align: left;
+.home-1{
     display: flex;
-    justify-content:space-around;
+    justify-content: center;
+    padding: 0 120px;
 }
 
 .foto-prof {
     padding: 5px 5px 5px 0;
+    position: relative;
+    z-index: -1;
+    bottom: 0;
+    right: 0;
+    height: 100%;
 }
 
 .desc-profile {
     display: flex;
-    padding: 5px 10px 5px 5px;
+    padding: 5px 30px 5px 5px;
     flex-direction: column;
     justify-content: center;
-
 }
 
 
-.name {
-    padding-bottom: 10px;
-}
-.univ {
-    font-family: 'Nunito', sans-serif;
-    padding: 0px 0 7px;
-    font-size:large;
-}
 .resume {
     margin-top: 20px;
 }
@@ -41,6 +41,13 @@
     border-radius: 50px;
     padding: 8px 20px;
  
+}
+
+.insta {
+    justify-content: center;
+    display: grid;
+    flex-wrap: wrap;
+    grid-template-columns: repeat(3, auto);
 }
 
 .insta img{
