--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -7,7 +7,7 @@ footer {
     justify-content: space-between;
     font-family: 'Poppins', sans-serif;
     margin-top: 30px;
-    padding: 10px;
+    padding: 10px 12%;
    
 }
 
