--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -8,7 +8,7 @@
 .home-1{
     display: flex;
     justify-content: center;
-    padding: 0 120px;
+    padding: 20px 15%;
 }
 
 .foto-prof {
@@ -57,3 +57,27 @@
     border-color: white;
     border-bottom: 10px;
 }
+
+
+@media screen and (max-width: 999px) {
+    .home-1 {
+      flex-direction: column;
+      padding: 20px 10%;
+    }
+    .desc-profile {
+      padding: 5px;
+    }
+
+    .desc-profile h1, .desc-profile h2, .desc-profile p ,.desc-profile div{
+      text-align: center;
+    } 
+
+    .foto-prof {
+      text-align: center;
+    }
+
+    .foto-prof img {
+        max-width: 100%;
+        max-height: 100%;
+    }
+  }
